// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can press "f" to run only failed tests: test results 1`] = `
"|                                           ^
1 |
3 |
at __tests__/bar.spec.js:2:43
> 2 |       test('bar 1', () => { expect('bar').toBe('foo'); });
Expected: \\"foo\\"
Received: \\"bar\\"
expect(received).toBe(expected) // Object.is equality
● bar 1
FAIL __tests__/bar.spec.js
PASS __tests__/foo.spec.js"
`;

exports[`can press "f" to run only failed tests: test results 2`] = `
"|                                           ^
1 |
3 |
at __tests__/bar.spec.js:2:43
> 2 |       test('bar 1', () => { expect('bar').toBe('foo'); });
Expected: \\"foo\\"
Received: \\"bar\\"
expect(received).toBe(expected) // Object.is equality
● bar 1
✕ bar 1
FAIL __tests__/bar.spec.js"
`;

exports[`can press "f" to run only failed tests: test summary 1`] = `
"Test Suites: 1 failed, 1 passed, 2 total
Tests:       1 failed, 1 passed, 2 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`can press "f" to run only failed tests: test summary 2`] = `
"Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;
